--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -33,3 +33,49 @@ q:before, q:after {
 table {
   border-collapse: collapse;
   border-spacing: 0; }
+
+a {
+  color: inherit;
+  text-decoration: none; }
+
+* {
+  box-sizing: border-box; }
+  *::before, *::after {
+    box-sizing: border-box; }
+
+.panel__title {
+  font-size: 1.625em;
+  text-align: center; }
+
+.header {
+  background: #000;
+  color: #fff;
+  margin-bottom: 1em;
+  padding-top: 4em;
+  text-align: center; }
+
+.header__wrapper {
+  margin-bottom: 4em; }
+
+.header__title {
+  font-size: 2em;
+  font-weight: bold; }
+
+.header__subline {
+  font-size: .875em;
+  font-style: italic;
+  margin: .25em 0 1em 0; }
+
+.navbar {
+  background: #ccc;
+  color: #000;
+  padding: .875em; }
+
+.navbar__list {
+  text-align: right; }
+
+.navbar__items {
+  display: inline-block; }
+
+.project__wrapper {
+  padding: 0 .5em; }
