--- a/app/sass/base/main.sass
+++ b/app/sass/base/main.sass
@@ -3,6 +3,10 @@
   &::before, &::after
     box-sizing: border-box
 
-.panel__title
-  font-size: 1.625em
-  text-align: center
+.panel
+  padding: 1.5em 0
+
+  &__title
+    font-size: 1.625em
+    margin-bottom: .875em
+    text-align: center
