--- a/app/sass/project.sass
+++ b/app/sass/project.sass
@@ -1,2 +1,31 @@
-.project__wrapper
-  padding: 0 .5em
+.project
+  background: #00d7ff
+  line-height: 1.25em
+
+  &__wrapper
+    background: #fafafa
+    box-shadow: 0 0 5px rgba(0, 0, 0, .5)
+    margin: 0 auto
+    padding: .5em
+    position: relative
+    width: 90%
+
+  &__title
+    font-size: 1.375em
+    margin: .625em 0
+
+  &__subtitle
+    font-size: 1.125em
+
+  &__items
+    margin: .5em 0
+
+  &__list
+    padding-left: 3em
+
+  &__listitem
+    list-style-type: disc
+    list-style-position: outside
+
+  &__img
+      max-width: 100%
