--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -43,39 +43,91 @@ a {
   *::before, *::after {
     box-sizing: border-box; }
 
-.panel__title {
-  font-size: 1.625em;
-  text-align: center; }
+.panel {
+  padding: 1.5em 0; }
+  .panel__title {
+    font-size: 1.625em;
+    margin-bottom: .875em;
+    text-align: center; }
 
 .header {
-  background: #000;
+  background: url(../img/header-bg.jpg), #000;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
   color: #fff;
-  margin-bottom: 1em;
-  padding-top: 4em;
+  padding: 20% 0;
   text-align: center; }
-
-.header__wrapper {
-  margin-bottom: 4em; }
-
-.header__title {
-  font-size: 2em;
-  font-weight: bold; }
-
-.header__subline {
-  font-size: .875em;
-  font-style: italic;
-  margin: .25em 0 1em 0; }
+  .header__title {
+    font-size: 2em;
+    font-weight: bold; }
+  .header__subline {
+    font-size: .875em;
+    font-style: italic;
+    margin: .25em 0 3em 0; }
+  .header__button {
+    background: #8b0000;
+    border: 1px solid #580000;
+    border-radius: 4px;
+    font-weight: bold;
+    padding: .5em 1em; }
 
 .navbar {
-  background: #ccc;
-  color: #000;
-  padding: .875em; }
-
-.navbar__list {
+  background: #8b0000;
+  color: #fff;
+  line-height: 0;
+  padding-top: .875em;
   text-align: right; }
+  .navbar__socials {
+    display: inline-block;
+    float: left;
+    margin-left: .875em; }
+  .navbar__socialitems {
+    box-shadow: -1px 1px 5px rgba(0, 0, 0, 0.25);
+    display: inline-block;
+    margin-right: .25em;
+    max-width: 1.25em; }
+    .navbar__socialitems img {
+      border-radius: 4px;
+      width: 100%; }
+  .navbar__hamburger {
+    margin-right: .875em;
+    padding-top: .15em;
+    vertical-align: top; }
+  .navbar__nav {
+    background: #14171a;
+    box-shadow: inset 0 11px 8px -10px rgba(0, 0, 0, 0.75);
+    margin-top: .875em; }
+  .navbar__list {
+    text-align: center; }
+    .navbar__list--collapse {
+      clear: both;
+      height: 0;
+      overflow: hidden; }
+  .navbar__items {
+    padding: 1.5em 0; }
 
-.navbar__items {
-  display: inline-block; }
-
-.project__wrapper {
-  padding: 0 .5em; }
+.project {
+  background: #00d7ff;
+  line-height: 1.25em; }
+  .project__wrapper {
+    background: #fafafa;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+    margin: 0 auto;
+    padding: .5em;
+    position: relative;
+    width: 90%; }
+  .project__title {
+    font-size: 1.375em;
+    margin: .625em 0; }
+  .project__subtitle {
+    font-size: 1.125em; }
+  .project__items {
+    margin: .5em 0; }
+  .project__list {
+    padding-left: 3em; }
+  .project__listitem {
+    list-style-type: disc;
+    list-style-position: outside; }
+  .project__img {
+    max-width: 100%; }
