--- a/app/sass/navbar.sass
+++ b/app/sass/navbar.sass
@@ -1,10 +1,41 @@
 .navbar
-  background: #ccc
-  color: #000
-  padding: .875em
-
-.navbar__list
+  background: #8b0000
+  color: #fff
+  line-height: 0
+  padding-top: .875em
   text-align: right
-  
-.navbar__items
-  display: inline-block
+
+  &__socials
+    display: inline-block
+    float: left
+    margin-left: .875em
+
+  &__socialitems
+    box-shadow: -1px 1px 5px rgba(0, 0, 0, .25)
+    display: inline-block
+    margin-right: .25em
+    max-width: 1.25em
+    img
+      border-radius: 4px
+      width: 100%
+
+  &__hamburger
+    margin-right: .875em
+    padding-top: .15em
+    vertical-align: top
+
+  &__nav
+    background: #14171a
+    box-shadow: inset 0 11px 8px -10px rgba(0, 0, 0, .75)
+    margin-top: .875em
+
+  &__list
+    text-align: center
+
+    &--collapse
+      clear: both
+      height: 0
+      overflow: hidden
+    
+  &__items
+    padding: 1.5em 0
