--- a/app/sass/navbar.sass
+++ b/app/sass/navbar.sass
@@ -30,12 +30,17 @@
     margin-top: .875em
 
   &__list
+    padding: 1em 0
+    height: 14em
+    overflow: hidden
     text-align: center
-
-    &--collapse
-      clear: both
-      height: 0
-      overflow: hidden
+    transition: .25s
     
   &__items
     padding: 1.5em 0
+
+.js-collapse
+  clear: both
+  height: 0
+  padding: 0
+
