--- a/app/sass/base/main.sass
+++ b/app/sass/base/main.sass
@@ -3,6 +3,13 @@
   &::before, &::after
     box-sizing: border-box
 
+body
+  font-family: 'Roboto', sans-serif;
+
+h1, h2, h3, h4
+  font-family: 'Roboto Condensed', sans-serif;
+  letter-spacing: .03em
+
 .panel
   padding: 1.5em 0
 
