--- a/app/sass/project.sass
+++ b/app/sass/project.sass
@@ -1,10 +1,7 @@
 .project
-  background: #00d7ff
   line-height: 1.25em
 
   &__wrapper
-    background: #fafafa
-    box-shadow: 0 0 5px rgba(0, 0, 0, .5)
     margin: 0 auto
     padding: .5em
     position: relative
@@ -12,7 +9,7 @@
 
   &__title
     font-size: 1.375em
-    margin: .625em 0
+    margin-bottom: .625em
 
   &__subtitle
     font-size: 1.125em
