--- a/app/sass/base/main.sass
+++ b/app/sass/base/main.sass
@@ -11,9 +11,9 @@ h1, h2, h3, h4
   letter-spacing: .03em
 
 .panel
-  padding: 1.5em 0
+  padding: 1.5em 1.5em 0
 
   &__title
     font-size: 1.625em
-    margin-bottom: .875em
+    margin-bottom: .5em
     text-align: center
