--- a/app/sass/project.sass
+++ b/app/sass/project.sass
@@ -2,10 +2,8 @@
   line-height: 1.25em
 
   &__wrapper
-    margin: 0 auto
-    padding: .5em
-    position: relative
-    width: 90%
+    border-bottom: 1px solid #14171a
+    padding: 1em 0 .5em
 
   &__title
     font-size: 1.375em
@@ -13,16 +11,26 @@
 
   &__subtitle
     font-size: 1.125em
+    margin: .5em 0
 
   &__items
     margin: .5em 0
 
   &__list
     padding-left: 3em
-
-  &__listitem
-    list-style-type: disc
+    list-style-type: circle
     list-style-position: outside
 
   &__img
-      max-width: 100%
+    max-width: 100%
+
+  &__toolList
+    font-size: .875em
+
+  &__toolItem
+    background: #8b0000;
+    border: 1px solid #580000
+    color: #fff
+    display: inline-block
+    padding: .25em .5em
+    vertical-align: top
