--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -147,3 +147,13 @@ h1, h2, h3, h4 {
     display: inline-block;
     padding: .25em .5em;
     vertical-align: top; }
+
+.tools__category {
+  border-bottom: 1px dotted #8b0000; }
+
+.tools__list {
+  margin: .5em 0 1em; }
+
+.tools__listItem {
+  display: inline-block;
+  vertical-align: top; }
