--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -48,6 +48,7 @@ body {
 
 h1, h2, h3, h4 {
   font-family: 'Roboto Condensed', sans-serif;
+  font-weight: 700;
   letter-spacing: .03em; }
 
 .panel {
@@ -156,4 +157,5 @@ h1, h2, h3, h4 {
 
 .tools__listItem {
   display: inline-block;
+  margin-right: .5em;
   vertical-align: top; }
