--- a/app/sass/project.sass
+++ b/app/sass/project.sass
@@ -28,8 +28,7 @@
     font-size: .875em
 
   &__toolItem
-    background: #8b0000;
-    border: 1px solid #580000
+    background: rgba(175,34,34,.8)
     color: #fff
     display: inline-block
     padding: .25em .5em
