Styled Sidebar and home page

--- a/src/pages/Home/index.sass
+++ b/src/pages/Home/index.sass
@@ -3,3 +3,20 @@
   display: flex
   align-items: center
   justify-content: center
+
+.heading
+  color: #14171a
+
+  &__title
+    font-size: 4em
+    font-weight: 700
+    margin-bottom: 1rem
+    text-shadow: -5px -5px 0 #2e9cca, -4px -4px 0 #2e9cca, -3px -3px 0 #2e9cca, -2px -2px 0 #2e9cca, -1px -1px 0 #2e9cca
+
+  &__subline
+    margin-bottom: 4em
+
+  &__button
+    background: #25274d
+    color: #fff
+    padding: .75em 2em
