--- a/src/components/Sidebar/index.sass
+++ b/src/components/Sidebar/index.sass
@@ -1,12 +1,13 @@
 .sidebar
   background: #29648a
+  border-right: 1px solid #464866
   color: #fff
   height: 100vh
   padding: 3em
   position: fixed
   text-align: right
   width: 20%
+  
+  &__nav
 
-.wrapper
-  padding-left: calc(20% + 1em)
-  height: 100vh
+  &__contacts
