--- a/src/pages/Home/index.sass
+++ b/src/pages/Home/index.sass
@@ -1,4 +1,4 @@
-.wrapper
+.center
   height: 100vh
   display: flex
   align-items: center
@@ -6,6 +6,7 @@
 
 .heading
   color: #14171a
+  margin-left: calc(-20% + 2em)
 
   &__title
     font-size: 4em
