Positionned element in sidebar, Added google font, coded data fetching for project section

--- a/src/components/Sidebar/Nav/index.sass
+++ b/src/components/Sidebar/Nav/index.sass
@@ -1,8 +1,9 @@
 .navList
 
   &__item
-    font-weight: bold
-    line-height: 1.5em
+    font-weight: 900
+    letter-spacing: .1em
+    line-height: 2em
     transition: .15s
 
     &:hover
