--- a/src/components/Sidebar/index.sass
+++ b/src/components/Sidebar/index.sass
@@ -9,5 +9,11 @@
   width: 20%
   
   &__nav
+    position: absolute
+    right: 3em
+    top: 30%
 
   &__contacts
+    bottom: .5em
+    position: absolute
+    left: 1em
