--- a/src/index.sass
+++ b/src/index.sass
@@ -1,5 +1,8 @@
+body
+  font-family: 'Source Sans Pro', sans-serif
+
 .wrapper
-  margin-left: calc(20% + 1em)
+  margin-left: calc(20% + 2em)
   max-width: 960px
   padding-top: 1.5em
   width: calc(80% - 2em)
