--- a/src/pages/Projects/index.sass
+++ b/src/pages/Projects/index.sass
@@ -1,8 +1,30 @@
 .projects
 
   &__title
-    font-size: 2em
+    font-size: 3em
     font-weight: bold
     margin-bottom: .5em
 
   &__text
+
+.projectsList
+  margin-top: 2em
+  &__item
+    border-top: 1px solid #ddd
+    padding: 1em 0
+    &__img
+      float: right
+      margin: 0 0 1em 3em
+      max-width: 40%
+    &__title
+      font-size: 2.25em
+      margin-bottom: .5em
+    &__blurb
+      margin-bottom: 1em
+    &__link
+      background: #29648a
+      color: #fff
+      display: inline-block
+      margin-right: .5em
+      padding: .5em 1em
+      vertical-align: top
