fixed homepage content height

--- a/src/components/Sidebar/Nav/index.sass
+++ b/src/components/Sidebar/Nav/index.sass
@@ -1,10 +1,11 @@
 .navList
 
   &__item
+    color: #ccc
     font-weight: 900
-    letter-spacing: .1em
+    letter-spacing: .15em
     line-height: 2em
     transition: .15s
 
-    &:hover
-      transform: scale(1.02)
+    &--active
+      color: #fff
