--- a/src/pages/Blog/Content/index.sass
+++ b/src/pages/Blog/Content/index.sass
@@ -7,8 +7,10 @@
 
     &__title
       font-weight: bold
+      margin-bottom: .5em
 
     &__description
+      margin-bottom: .5em
 
     &__link
       background: #29648a
