--- a/src/pages/Projects/index.sass
+++ b/src/pages/Projects/index.sass
@@ -2,7 +2,6 @@
 
   &__title
     font-size: 3em
-    font-weight: bold
     margin-bottom: .5em
 
   &__text
@@ -11,12 +10,14 @@
   margin-top: 2em
   &__item
     border-top: 1px solid #ddd
+    clear: both
     padding: 1em 0
     &__img
       float: right
       margin: 0 0 1em 3em
       max-width: 40%
     &__title
+      color: #29648a
       font-size: 2.25em
       margin-bottom: .5em
     &__blurb
