--- a/src/index.sass
+++ b/src/index.sass
@@ -1,8 +1,9 @@
 body
   font-family: 'Source Sans Pro', sans-serif
+  color: #333
 
 .wrapper
-  margin-left: calc(20% + 2em)
+  margin-left: calc(20% + 3em)
   max-width: 960px
-  padding-top: 1.5em
-  width: calc(80% - 2em)
+  padding-top: 3em
+  width: calc(80% - 6em)
