--- a/src/pages/Blog/Content/index.sass
+++ b/src/pages/Blog/Content/index.sass
@@ -1,12 +1,15 @@
 .blogposts
 
   &__item
+    border: 1px solid #ccc
+    border-radius: 3px
     display: inline-block
+    padding: 1em
     vertical-align: top
-    width: 33%
+    width: 30%
 
     &__title
-      font-weight: bold
+      font-size: 2em
       margin-bottom: .5em
 
     &__description
