--- a/src/pages/Contact/index.sass
+++ b/src/pages/Contact/index.sass
@@ -4,6 +4,10 @@
 .contact
   padding: .5em
 
+  @media screen and (min-width: $breakpoint-large)
+    margin: 0 auto
+    width: 45%
+
   &__heading
     font-size: 3em
     margin-bottom: .5em
@@ -23,7 +27,6 @@
 
       @media screen and (min-width: $breakpoint-large)
         margin: .5em auto
-        width: 45%
 
       &__link
         display: block
