--- a/src/pages/Contact/index.sass
+++ b/src/pages/Contact/index.sass
@@ -37,6 +37,9 @@
       &__icon
         line-height: .8em
         margin-bottom: .2em
+        
+        &--reduce
+          font-size: 3.5em
 
         @media screen and (min-width: $breakpoint-small)
           float: left
