--- a/src/pages/Blog/index.sass
+++ b/src/pages/Blog/index.sass
@@ -1,8 +1,8 @@
 .loader
-  left: 50%
-  position: absolute
-  top: 50%
-  transform: translate(-50%, -50%)
+  align-items: center
+  display: flex
+  height: calc(100vh - 4em - 3px)
+  justify-content: center
 
 .blog
   padding: .5em
