--- a/src/pages/Home/index.sass
+++ b/src/pages/Home/index.sass
@@ -1,4 +1,5 @@
 @import ../../sass/colors.sass
+@import ../../sass/media.sass
 
 .center
   display: flex
@@ -31,6 +32,10 @@
 
     &:last-child
       margin-right: 0
+
+    @media screen and (max-width: $breakpoint-smaller)
+      margin-right: 0
+      margin-bottom: .5em
 
     &--fill
       background: $special
