fixed smaller screen homepage

--- a/src/components/Sidebar/index.sass
+++ b/src/components/Sidebar/index.sass
@@ -12,12 +12,12 @@
     display: inline-block
     vertical-align: top
     width: 50%
-    @media screen and (min-width: $breakpoint-large)
+    @media screen and (min-width: $breakpoint-small)
       width: 75%
 
   &__contacts
     display: inline-block
     vertical-align: top
     width: 50%
-    @media screen and (min-width: $breakpoint-large)
+    @media screen and (min-width: $breakpoint-small)
       width: 25%
