--- a/src/pages/Home/index.sass
+++ b/src/pages/Home/index.sass
@@ -15,6 +15,12 @@
     font-weight: 600
     margin-bottom: .1em
 
+    @media screen and (min-width: $breakpoint-small)
+      font-size: 4em
+
+    @media screen and (max-width: $breakpoint-smaller)
+      font-size: 2.5em
+
   &__subline
     margin-bottom: 2em
 
@@ -34,8 +40,11 @@
       margin-right: 0
 
     @media screen and (max-width: $breakpoint-smaller)
-      margin-right: 0
-      margin-bottom: .5em
+      display: block
+      margin: .5em auto
+
+      &:last-child
+        margin-right: auto
 
     &--fill
       background: $special
