increased line height in project

--- a/src/pages/Projects/index.sass
+++ b/src/pages/Projects/index.sass
@@ -71,6 +71,7 @@
       margin-bottom: .5em
     &__blurb
       color: $text-dark
+      line-height: 1.25em
       margin-bottom: 1em
 
     &__tech
