--- a/src/pages/Blog/Content/index.sass
+++ b/src/pages/Blog/Content/index.sass
@@ -6,6 +6,7 @@
   &__item
     background: $background-dark
     border-top: 1px solid $special
+    margin-bottom: 1em
     padding: 1em
 
     @media screen and (min-width: $breakpoint-small)
@@ -13,7 +14,13 @@
       border-top: 0
 
     @media screen and (min-width: $breakpoint-large)
-      width: 45%
+      display: inline-block
+      margin-right: 2%
+      vertical-align: top
+      width: 49%
+
+      &:nth-child(even)
+        margin-right: 0
 
     &__title
       font-size: 2em
