Added layouts to routes, added catch-all route

--- a/src/index.sass
+++ b/src/index.sass
@@ -9,7 +9,7 @@ body
 .wrapper
   margin: 0 auto
   max-width: 1000px
-  padding: calc(4em + 3px) .5em 0 .5em
+  padding: calc(4.5em + 3px) 1em 0 1em
 
 h1, h2, h3, h4, h5, h6
   font-family: $headingFont
