--- a/src/pages/Home/index.sass
+++ b/src/pages/Home/index.sass
@@ -5,7 +5,8 @@
   display: flex
   align-items: center
   justify-content: center
-  height: calc(100vh - 5em - 3px)
+  height: 100vh
+  padding: 0 .5em
 
 .heading
   text-align: center
