--- a/src/index.sass
+++ b/src/index.sass
@@ -10,7 +10,27 @@ body
   margin: 0 auto
   max-width: 1000px
   padding: calc(4.5em + 3px) 1em 0 1em
+  width: 100%
 
 h1, h2, h3, h4, h5, h6
   font-family: $headingFont
 
+.slide-enter
+  position: absolute
+  left: 100%
+  transform: translateX(100%)
+
+.slide-enter.slide-enter-active
+  left: 50%
+  transform: translateX(-50%)
+  transition: left 333ms ease-in-out, transform 333ms ease-in-out
+
+.slide-exit
+  left: 50%
+  transform: translateX(-50%)
+
+.slide-exit.slide-exit-active
+  position: absolute
+  left: -100%
+  transform: translateX(-100%)
+  transition: left 333ms ease-in-out, transform 333ms ease-in-out
