--- a/src/pages/Contact/index.sass
+++ b/src/pages/Contact/index.sass
@@ -5,7 +5,7 @@
 
   @media screen and (min-width: $breakpoint-large)
     margin: 0 auto
-    width: 45%
+    width: 45% !important
 
   &__heading
     font-size: 3em
